--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,6 +1,6 @@
 #nav {
   display: flex;
-  background-color: rgb(14, 14, 14);
+  background-color: rgb(5, 5, 5);
   text-align: center;
   position: fixed;
   left: 0;
